--- a/tiny-key-value-server/tiny-key-value-server.csproj
+++ b/tiny-key-value-server/tiny-key-value-server.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="Microsoft.OpenApi" Version="1.6.23" />
+  </ItemGroup>
+
 </Project>
